src/styles/base.css
@tailwind base; /* Preflight will be injected here */

@tailwind components;

@tailwind utilities;

*,
*::before,
*::after {
    box-sizing: border-box;
    line-height: 1.5;
    backface-visibility: hidden;
}

:root {
    font-variant-ligatures: common-ligatures;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
}

button,
input,
textarea,
label {
    cursor: pointer;
}

[hidden] {
    display: none;
}

::selection {
    background: rgba(45, 170, 219, 0.3);
}


header .icon {
    display: inline-block;
    content: attr(data-icon);
    font-size: 78px;
}

header .background {
    height: 250px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;
}

header .background + .icon {
    margin-top: 84px;
}

header .background + h1 {
    margin-top: 175px;
}

h1 {
    margin: 0;
    font-weight: 600;
    font-size: 1.875em;
    line-height: 1.3;
    padding-top: 2em;
    padding-bottom: 7px;
}

header h1 {
    margin: 0;
    font-weight: 700;
    line-height: 1.2;
    font-size: 40px;
    padding-bottom: 23px;
    padding-top: 20px;
}

h2 {
    margin: 0;
    font-weight: 600;
    font-size: 1.5em;
    line-height: 1.3;
    padding-top: 1.4em;
    padding-bottom: 4px;
}

h3 {
    margin: 0;
    font-weight: 600;
    font-size: 1.25em;
    line-height: 1.3;
    padding-top: 1em;
    padding-bottom: 4px;
}

p {
    word-break: break-word;
    padding-top: 3px;
    padding-bottom: 3px;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-top: 2px !important;
    margin-bottom: 2px !important;
}

blockquote {
    border-left: 3px solid;
    padding-left: 13px;
    padding-right: 0.9em;
    margin-top: 8px;
    margin-bottom: 4px;
    font-size: 1.2em;
    line-height: 1.5;
    margin-left: auto;
    margin-right: auto;
    max-width: 676px;
}

ul {
    @apply list-disc list-inside px-1;
}

li {
    @apply py-1;
}
li:has(strong) {
    @apply pt-6;
}

li > p {
    @apply inline;
}

strong {
    @apply font-medium;
}


a {
    color: inherit;
    opacity: 0.7;
    transition: all 100ms ease-in;
    @apply underline decoration-1 decoration-gray-400 underline-offset-4
}

a:hover {
    opacity: 1;
    @apply decoration-amber-500 opacity-100;
}

img {
    display: block;
    margin: 0.5em auto;
    height: auto;
    padding-left: 16px;
    padding-right: 16px;
    max-width: 100%;
}

.icon {
    @apply no-underline;
}

